MDEV-3856 Import of a large polygon fails/hangs.         The Gis_point::init_from_wkt called the String::realloc(),         and this call is quite slow in the DEBUG mode. Which makes         loading the huge polygon hang forever.         Fixed by using the String::realloc(size, inc_size) version instead         as it's done for other spatial features.